--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
 </head>
-  <title> Hey 
+  <title> Hey there
   </title>
 <body>
   ...
